force-app/main/default/objects/Sales__c/Sales__c.object-meta.xml
<CustomObject>
    <label>销售姓名</label>
    <nameField>
        <displayFormat>S{0000000000}</displayFormat>
        <label>Salesperson No</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>