force-app/main/default/objects/Sales__c/fields/IsKeyUser__c.field-meta.xml
<CustomField>
    <fullName>IsKeyUser__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If there are multiple sales in the same product line, select one sales person as the key user for reports and statistics</inlineHelpText>
    <label>IsKeyUser</label>
    <type>Checkbox</type>
</CustomField>