force-app/main/default/objects/Sales__c/fields/Sales__c.field-meta.xml
<CustomField>
    <fullName>Sales__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Salesperson Name</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Sales</relationshipName>
    <type>Lookup</type>
</CustomField>